<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityRegistroUsuario">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/msj_registro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUsuario"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.07999998">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usuario"
            android:maxLength="20" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilUsuario"
        app:layout_constraintVertical_bias="0.01999998"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:maxLength="70"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilClave"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:inputType="textPassword"
        app:passwordToggleEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilEmail"
        app:layout_constraintVertical_bias="0.01999998"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ingrese_clave"
            android:inputType="textPassword"
            android:maxLength="12"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilConfirmarClave"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:passwordToggleEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilClave"
        app:layout_constraintVertical_bias="0.01999998"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirmar_contrasena"
            android:inputType="textPassword"
            android:maxLength="12"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/spnrEdad"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:entries="@array/edadRegistro"
        app:layout_constraintBottom_toTopOf="@+id/tvSelecSexo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSelecEdad" />

    <TextView
        android:id="@+id/tvSelecEdad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msj_selec_edad"
        app:layout_constraintBottom_toTopOf="@+id/spnrEdad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilConfirmarClave" />

    <RadioGroup
        android:id="@+id/rgSelecSexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.792">

        <RadioButton
            android:id="@+id/rbMasculino"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/selectMasculino"
            android:textAlignment="center" />

        <RadioButton
            android:id="@+id/rbFemenino"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/selectFemenino"
            android:textAlignment="center" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvSelecSexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seleccionar_sexo"
        app:layout_constraintBottom_toTopOf="@+id/rgSelecSexo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnrEdad" />

    <Button
        android:id="@+id/btnRegistrarUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="157dp"
        android:layout_marginBottom="41dp"
        android:text="@string/registrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgSelecSexo"
        app:layout_constraintVertical_bias="0.838" />


</androidx.constraintlayout.widget.ConstraintLayout>